# calib3d

./: .gitignore  README.md  README.tex.md  pyproject.toml  release.sh  requirements.txt  setup.py
.github/workflows/: main.yml  python-package.yml
calib3d/: __init__.py  calib.py  draw.py  points.py
calib3d/pycuda/: __init__.py  pycuda_calib.py
calib3d/tf1/: __init__.py  tf1_calib.py
docs/: calib3d.html  index.html  index.md  points.md  search.js
docs/calib3d/: calib.html  calib.md  draw.html  index.html  index.md  points.html  pycuda.html  tf1.html
docs/calib3d/pycuda/: index.html  pycuda_calib.html
docs/calib3d/tf1/: index.html  tf1_calib.html  tf1_calib.md
docs/tf1/: index.md
tests/: test_calib.py
